<resources>
    <string name="app_name">RickAndMortyApi</string>

    <string name="loading">Loading...</string>

    <!-- ErrorView -->
    <string name="empty_view_label">Ops! =(</string>
    <string name="empty_view_message">The data could not be displayed.\nThere was a problem communicating with the server</string>
    <string name="try_again">Try again</string>

    <!-- HomeView -->
    <string name="search_hint">Type your character name here</string>

    <!-- Character Detail -->
    <string name="char_detail_name_label">Name:</string>
    <string name="char_detail_species_label">Species:</string>
    <string name="char_detail_episodes_number_label">Number of episodes:</string>
    <string name="char_detail_location_label">Location:</string>
</resources>